Wed Dec  8 18:19:32 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/FAQ.html, htdoc/bugs.html: Update to refer to latest versions.

Wed Dec  8 18:10:27 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/QuotedStringList.cc (Create): Make sure that an empty
	token isn't ignored.

Tue Dec  7 10:26:58 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc (setVariables): Fix a compilation error by
	making a statment with '?' an explicit if-else statment.

	* htdoc/RELEASE.html: Change case_sensitive fix to a bug-fix,
	update release date for 12/9/99. (We certainly didn't release yesterday!)

Mon Dec  6 22:17:21 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(Display): Add missing call to setupTemplates(),
	for handling template_patterns. Oops!
	* htdoc/attrs.html: Fixed a couple typos in new attributes.
	* htdoc/ChangeLog: Update to latest version.

Mon Dec  6 16:41:04 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/main.html: Update news with latest version.
	* htdig/htdig.cc(main), htdig/Document.cc(Document),
	htcommon/defaults.cc, htdoc/attrs.html, htdoc/cf_byname.html,
	htdoc/cf_byprog.html: Add authorization attribute, settable by
	htdig -u.  Also fixes PR#490, by setting authentication before
	robots.txt fetched.
	* htdoc/RELEASE.html: Update with latest fix.

Fri Dec  3 17:31:47 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/DocumentRef.cc(Clear): Set docHopCount & docSig to 0,
	and clear docEmail, docNotification & docSubject strings to have
	a clean slate for Deserialize(), which assume 0/empty for these.
	Fixes problem with hop counts getting clobbered.
	* htdoc/RELEASE.html: Update with latest fix.
	* htdoc/ChangeLog: Update to latest version.

Fri Dec  3 12:12:19 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc: removed vestiges of internal Postscript
	support that never worked, and removed test for application/msword,